Nova Base de Calculo

--- a/dashboard.html
+++ b/dashboard.html
@@ -33,16 +33,12 @@
                 <ul>
                     <li>TUSD R$ <b id="tusd-dash">0,0000</b> Kwh</li>
                     <li>TE R$ <b id="te-dash">0,0000</b> Kwh</li>
-                    <li>BAND. VERMELHA II R$ <b id="redflag-dash">00,00</b></li>
+                    <li>BANDEIRA R$ <b id="redflag-dash">00,00</b></li>
                 </ul>
 
                 <p>TARIFAS COM ICMS (25%) *</p>
 
-                <div class="input-area-dash">
-                    <input type="text" name="" id="valor-dash" placeholder="Meu consumo é...">
-                    <button id="btn-dash">Calcular novamente</button>
-                </div>
-
+      
             </div>
 
             <div class="dash-details">
@@ -54,9 +50,6 @@
                     <li><b class="plus">+</b> BD VERM = <b id="redflag-total">000,00</b></li>
                     <li><b class="plus">+</b> PIS/PASEP = <b id="pis-pasep-total">000,00</b></li>
                     <li><b class="plus">+</b> COFINS = <b id="cofins-total">000,00</b></li>
-                    <li><b class="plus">+</b> MULTA = <b id="multa-total">000,00</b></li>
-                    <li><b class="plus">+</b> JUR. MORA = <b id="jur-mora-total">000,00</b></li>
-                    <li><b class="plus">+</b> AT. MONET. = <b id="at-monet-total">000,00</b></li>
                     <li><b class="plus">+</b> COSIP SP = <b id="cosip-sp-total">000,00</b></li>
                     <li>_________________</li>
                 </ul>
