--- a/dashboard.html
+++ b/dashboard.html
@@ -38,7 +38,7 @@
 
                 <p>TARIFAS COM ICMS (25%) *</p>
 
-      
+
             </div>
 
             <div class="dash-details">
@@ -61,6 +61,38 @@
             </div>
 
         </div>
+
+    </div>
+
+    <div class="month-list">
+
+        <ul>
+            <li id="month-title">
+                <h2>Registros dos Ultimos Meses</h2>
+            </li>
+
+            <li>
+                <div class="month">
+                    <h3>OUTUBRO // 2021</h3>
+                    <h1>R$ 400,00</h1>
+                </div>
+            </li>
+
+            <li>
+                <div class="month">
+                    <h3>NOVEMBRO // 2021</h3>
+                    <h1>R$ 400,00</h1>
+                </div>
+            </li>
+
+            <li>
+                <div class="month">
+                    <h3>DEZEMBRO// 2021</h3>
+                    <h1>R$ 400,00</h1>
+                </div>
+            </li>
+        </ul>
+
     </div>
 
 </body>
@@ -73,7 +105,6 @@
     btnCalcDash.addEventListener('click', function () {
         loadAgain()
     })
-
 </script>
 
 </html>
