--- a/dashboard.html
+++ b/dashboard.html
@@ -68,26 +68,26 @@
 
         <ul>
             <li id="month-title">
-                <h2>Registros dos Ultimos Meses</h2>
+                <h2>&#x1F4BE Registros dos Ultimos Meses</h2>
             </li>
 
             <li>
                 <div class="month">
-                    <h3>OUTUBRO // 2021</h3>
+                    <h3>&#x1f4c5 OUTUBRO // 2021 </h3>
                     <h1>R$ 400,00</h1>
                 </div>
             </li>
 
             <li>
                 <div class="month">
-                    <h3>NOVEMBRO // 2021</h3>
+                    <h3>&#x1f4c5 NOVEMBRO // 2021</h3>
                     <h1>R$ 400,00</h1>
                 </div>
             </li>
 
             <li>
                 <div class="month">
-                    <h3>DEZEMBRO// 2021</h3>
+                    <h3> &#x1f4c5 DEZEMBRO// 2021</h3>
                     <h1>R$ 400,00</h1>
                 </div>
             </li>
