--- a/dashboard.html
+++ b/dashboard.html
@@ -21,6 +21,8 @@
         <div class="content">
             <div class="dash-info">
 
+                <a href="index.html" target="_self">Voltar ao início</a>
+
                 <h1>Huuro</h1>
                 <h3>
                     Com <b id="resultado">000 Kwh</b>, o valor da sua conta de luz está atualmente em
