--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h1>Huuro</h1>
 
                 <h3>
-                    Descubra quanto virá na conta de luz, inserindo o valor dos Kwh gastos até o momento
+                    Descubra quanto virá na conta de luz, inserindo o valor dos Kwh gastos até o momento!
                 </h3>
 
                 <div class="input-area">
