--- a/dashboard.html
+++ b/dashboard.html
@@ -40,6 +40,7 @@
 
                 <p>TARIFAS COM ICMS (25%) *</p>
 
+                <button id="btn-save">Salvar este Mês</button>
 
             </div>
 
