Save Month Feature (In progress)

--- a/dashboard.html
+++ b/dashboard.html
@@ -28,9 +28,7 @@
                     Com <b id="resultado">000 Kwh</b>, o valor da sua conta de luz está atualmente em
                 </h3>
 
-                <h1 id="total-info">
-                    R$ 000,00
-                </h1>
+                <h1 id="total-info"></h1>
 
                 <ul>
                     <li>TUSD R$ <b id="tusd-dash">0,0000</b> Kwh</li>
@@ -40,7 +38,7 @@
 
                 <p>TARIFAS COM ICMS (25%) *</p>
 
-                <button id="btn-save">Salvar este Mês</button>
+                <button id="btn-save">Salvar este Mês &#x1F4BE</button>
 
             </div>
 
@@ -67,33 +65,13 @@
 
     </div>
 
-    <div class="month-list">
+    <div id="month-div" class="month-list">
 
         <ul>
             <li id="month-title">
                 <h2>&#x1F4BE Registros dos Ultimos Meses</h2>
             </li>
-
-            <li>
-                <div class="month">
-                    <h3>&#x1f4c5 OUTUBRO // 2021 </h3>
-                    <h1>R$ 400,00</h1>
-                </div>
-            </li>
-
-            <li>
-                <div class="month">
-                    <h3>&#x1f4c5 NOVEMBRO // 2021</h3>
-                    <h1>R$ 400,00</h1>
-                </div>
-            </li>
-
-            <li>
-                <div class="month">
-                    <h3> &#x1f4c5 DEZEMBRO// 2021</h3>
-                    <h1>R$ 400,00</h1>
-                </div>
-            </li>
+           
         </ul>
 
     </div>
@@ -101,5 +79,6 @@
 </body>
 
 <script src="assets/js/calcular-luz.js"></script>
+<script src="assets/js/save-month.js"></script>
 
 </html>
